--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ a{
     height: 100%;
     width: 100%; 
     background-color: black;
-    opacity:.7;
+    opacity:.4;
     z-index:-1;
 }
 #hero .hero
@@ -68,6 +68,7 @@ a{
 }
 #hero h1:nth-child(3)
 {
+    animation: text_reveal_name .5s ease  forwards;
     animation-delay:3s;
 }
 #hero h1 span{
@@ -129,5 +130,13 @@ background-color: crimson;
     100%
     {
         color: white;
+    }
+}
+@keyframes text_reveal_name
+{
+    100%
+    {
+        color: crimson;
+        font-weight:500;
     }
 }
